Take implemented.
Implemented take's CRUD operations.